# agentcore_eva_opt

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  agentcore.py  auth.py  aws.py  db.py  deployer.py  invokers.py  jobs.py  lab4_path.py  main.py  models.py  samples.py  scenarios.py  simulation.py  telemetry.py
backend/app/routers/: abtest.py  agents.py  bundles.py  cleanup.py  datasets.py  deploy.py  evaluate.py  evaluators.py  experiments.py  health.py  insights.py  recommend.py  runs.py  samples.py  session.py
backend/scripts/: e2e_experiment.py  e2e_external.py  e2e_live.py
backend/tests/: test_abtest_bundle_arn_resolution.py  test_abtest_cleanup_shape.py  test_agents_datasets_crud.py  test_auth.py  test_bundles_shape.py  test_cloud_datasets.py  test_deploy_path.py  test_deployer.py  test_eval_recommend_shape.py  test_experiment_kind.py  test_experiments_crud.py  test_external_agents.py  test_gateway_setup_payload.py  test_gateway_traffic.py  test_health.py  test_insights_flow.py  test_invokers.py  test_passive_runs.py  test_persistence.py  test_runs_flow.py  test_samples.py  test_scenario_datasets.py  test_scenario_runs.py  test_target_ab_setup.py  test_telemetry_check.py  test_traffic_context.py  test_weights_pause_resume.py
demo-agent/: README.md  pyproject.toml  run-local.sh  run.sh
demo-agent/app/: agent.py  main.py  tracing.py
demo-agent/tests/: test_invoke.py  test_tracing.py
sample-open-weight-models-with-amazon-bedrock/: .gitignore  README.md  pre-run.sh  pyproject.toml
sample-open-weight-models-with-amazon-bedrock/lab1/: Lab1a_-_Model_Selection_Framework.ipynb  Lab1b_-_API_Integration_Options.ipynb  extract_bedrock_pricing.py  llm_compare_jupyter_clean.py
sample-open-weight-models-with-amazon-bedrock/lab2/: Lab2Extension_Classical_Metrics.ipynb  Lab2_Automatic_Evaluation.ipynb
sample-open-weight-models-with-amazon-bedrock/lab3/: Lab3_Prompt_Optimization.ipynb  utils.py
sample-open-weight-models-with-amazon-bedrock/lab3/datasets/mathvista/: sample_data.template.json
sample-open-weight-models-with-amazon-bedrock/lab4/: .gitignore  Lab4_AgentCore_Optimization.ipynb  README.md  cloudwatch-transaction-search.cfn.yaml  deploy_agent.py  hr_assistant_agent.py
scripts/: start.sh  stop.sh
src/: App.tsx  index.css  main.tsx
src/components/: ABComparisonChart.test.tsx  ABComparisonChart.tsx  AsyncRunButton.tsx  CodeViewPanel.tsx  CredentialsPanel.tsx  DiffView.test.tsx  DiffView.tsx  Landing.tsx  LazyABChart.tsx  LiveBanner.tsx  LiveMode.test.tsx  LiveRunButton.tsx  LoginGate.test.tsx  LoginGate.tsx  ModeToggle.tsx  ScoreCard.tsx  StepShell.test.tsx  StepShell.tsx  Stepper.tsx
src/console/: CodeEditorImpl.tsx  ConsoleShell.test.tsx  ConsoleShell.tsx  LazyCodeEditor.tsx
src/data/: agent.ts  codeSnippets.ts  data.test.ts  datasetEval.ts  evaluators.test.ts  evaluators.ts  index.ts  insights.ts  prompts.ts  recommendations.ts  results.ts  routingComparison.ts
src/i18n/: i18n.test.tsx  index.tsx  lang.ts  messages.ts
src/lib/: abVerdict.test.ts  abVerdict.ts  cn.ts  datasetIo.test.ts  datasetIo.ts  experimentNames.test.ts  experimentNames.ts  groundTruth.ts  highlight.test.ts  highlight.ts  liveApi.test.ts  liveApi.ts  persistence.test.ts  persistence.ts  scenarioValidation.ts  (+3 more)
(+48 files in other folders)
