[project]
name = "agentxray-demo-agent"
version = "1.0.0"
description = "Locally-runnable demo EXTERNAL agent: Claude Agent SDK + manual gen_ai spans + ADOT export."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "claude-agent-sdk>=0.1",
    # The AgentCore observability doc requires BOTH: without botocore, ADOT
    # cannot resolve the region → OTLP endpoints stay unconfigured (localhost).
    "aws-opentelemetry-distro>=0.10.0",
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]
