[project]
name = "sample-open-weight-models-with-amazon-bedrock"
version = "0.1.0"
description = "Code samples for a hands-on workshop exploring open weight models on Amazon Bedrock"
requires-python = ">=3.11"
dependencies = [
    "aws-bedrock-token-generator>=1,<2",  # Generate ephemeral API keys for Bedrock
    "aws-opentelemetry-distro>=0.18.0",  # Observability for local agent examples
    "bedrock-agentcore>=1.7.0",  # Deploy agents to Bedrock AgentCore
    "boto3>=1.43.8,<2",  # Python SDK for AWS, Since Bedrock APO launch
    "crewai>=1.13,<2",
    "ipython",  # Interactive kernel for using Python in notebooks
    "ipywidgets", # Interactive widget outputs for notebooks
    "langchain>=1.0.3,<2",
    "langchain-aws>=1,<2",
    "langchain-core>=1.0.3,<2",
    "langchain-openai>=1.0.3,<2",
    "langgraph>=1.0.3,<2",
    "matplotlib>=3.9,<4",  # Comprehensive library for creating visualizations
    "openai>=2.6,<3",  # OpenAI Python SDK (for calling OpenAI-compatible APIs on Bedrock)
    "pandas>=2.3",  # Utilities for working with tabular data as "dataframes"
    "Pillow>=10.0.0",  # Image processing utilities
    "requests>=2.34.2",  # Making raw HTTP(S) API requests
    "rich>=14.0.0",  # Render rich text in the console/terminal
    "s3fs",  # Access S3 data with file-like methods (we'll use via UPath)
    "sagemaker>=2.245,<3",  # High-level Python SDK for Amazon SageMaker
    "seaborn>=0.13.2",  # Statistical data visualization built on matplotlib
    "strands-agents[otel]>=1.45.0",  # For local agent in lab 4 (with observability add-on)
    "universal-pathlib"  # Generic file-like IO for both local and S3 files
]

# This project is only for dependencies - not building libraries:
[tool.setuptools]
py-modules = []
packages = []
